--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,6 @@
   --transition: 0.8s;
   --border-radius: 8px;
   --letter-spacing: 1px;
-  /* --main-color: #10cab7;
-  --sec-color: #2c4755;
-  --section-padding: 60px;
-  --section-backgroung: #f6f6f6; */
 }
 html {
  scroll-behavior: smooth;
@@ -20,7 +16,7 @@ html {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 body {
-  background-image: url(/image/subscribe.jpg);
+  background-image: url(../image/subscribe.jpg);
   background-size: auto;
 }
 ul {
