--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 body {
-  background-image: url(../image/subscribe.jpg);
+  background-image: url(../subscribe.jpg);
   background-size: auto;
 }
 ul {
